force-app/main/default/objects/Opportunity/fields/Account_Fields__c.field-meta.xml
<CustomField>
    <fullName>Account_Fields__c</fullName>
    <label>Account Fields</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Do not get records</fullName>
            </value>
            <value>
                <fullName>Get records</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>