force-app/main/default/objects/Opportunity/fields/Billing_Postal_code__c.field-meta.xml
<CustomField>
    <fullName>Billing_Postal_code__c</fullName>
    <label>Billing Postal code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>