force-app/main/default/objects/Opportunity/fields/breadth__c.field-meta.xml
<CustomField>
    <fullName>breadth__c</fullName>
    <label>breadth</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>