force-app/main/default/objects/Opportunity/fields/closed__c.field-meta.xml
<CustomField>
    <fullName>closed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>closed</label>
    <type>Checkbox</type>
</CustomField>