force-app/main/default/objects/Opportunity/fields/Days_Remaining_for_close__c.field-meta.xml
<CustomField>
    <fullName>Days_Remaining_for_close__c</fullName>
    <formula>CloseDate -  TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Remaining for close</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>