force-app/main/default/objects/Opportunity/fields/Length_of_agreement_term_other__c.field-meta.xml
<CustomField>
    <fullName>Length_of_agreement_term_other__c</fullName>
    <label>Length of agreement term other</label>
    <length>10</length>
    <type>Text</type>
</CustomField>