force-app/main/default/objects/Opportunity/fields/Multiple_of_5__c.field-meta.xml
<CustomField>
    <fullName>Multiple_of_5__c</fullName>
    <label>Multiple of 5</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>