force-app/main/default/objects/Opportunity/fields/new_Order__c.field-meta.xml
<CustomField>
    <fullName>new_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>new Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>