force-app/main/default/objects/Opportunity/fields/Opportunity_1__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_1__c</fullName>
    <label>Opportunity 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>