force-app/main/default/objects/Opportunity/fields/Opportunity_2__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_2__c</fullName>
    <label>Opportunity 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>