force-app/main/default/objects/Opportunity/fields/Opportunity_3__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_3__c</fullName>
    <label>Opportunity 3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>