force-app/main/default/objects/Opportunity/fields/Opportunity_Payment__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Payment__c</fullName>
    <label>Opportunity Payment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>