force-app/main/default/objects/Opportunity/fields/Opportunity_Progress__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Progress__c</fullName>
    <formula>IF( Percent_Completed__c  &lt; 0.25,&quot;Early&quot;,IF( Percent_Completed__c  &gt; 0.75,&quot;Late&quot;,&quot;Middle&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Progress</label>
    <type>Text</type>
</CustomField>