force-app/main/default/objects/Opportunity/fields/Percent_Completed__c.field-meta.xml
<CustomField>
    <fullName>Percent_Completed__c</fullName>
    <formula>((DAY( CloseDate ) -  DAY(DATEVALUE(CreatedDate )))/100) *  DAY(TODAY())</formula>
    <label>Percent Completed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>