force-app/main/default/objects/Opportunity/fields/Review__c.field-meta.xml
<CustomField>
    <fullName>Review__c</fullName>
    <inlineHelpText>Only Owner can edit</inlineHelpText>
    <label>Review</label>
    <length>255</length>
    <type>Text</type>
</CustomField>