force-app/main/default/objects/Opportunity/fields/Services_Required__c.field-meta.xml
<CustomField>
    <fullName>Services_Required__c</fullName>
    <label>Services Required</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>General maintenance</fullName>
            </value>
            <value>
                <fullName>annual maintenance</fullName>
            </value>
            <value>
                <fullName>wheel alignment</fullName>
            </value>
            <value>
                <fullName>towing service</fullName>
            </value>
            <value>
                <fullName>preventive maintenance</fullName>
            </value>
            <value>
                <fullName>general repairs</fullName>
            </value>
            <value>
                <fullName>upgrades</fullName>
            </value>
            <value>
                <fullName>car body repair</fullName>
            </value>
            <value>
                <fullName>denting &amp; painting</fullName>
            </value>
            <value>
                <fullName>road side assistance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>