force-app/main/default/objects/Opportunity/fields/Square_feet__c.field-meta.xml
<CustomField>
    <fullName>Square_feet__c</fullName>
    <formula>breadth__c  *  Length__c</formula>
    <label>Square feet</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>