force-app/main/default/objects/Opportunity/recordTypes/Record_type_1.recordType-meta.xml
<RecordType>
    <fullName>Record_type_1</fullName>
    <active>true</active>
    <businessProcess>HAD Team</businessProcess>
    <label>Record type 1</label>
</RecordType>