force-app/main/default/objects/Opportunity/recordTypes/Record_type_2.recordType-meta.xml
<RecordType>
    <fullName>Record_type_2</fullName>
    <active>true</active>
    <businessProcess>HAD Team</businessProcess>
    <label>Record type 2</label>
</RecordType>