force-app/main/default/objects/Opportunity/recordTypes/Record_type_3.recordType-meta.xml
<RecordType>
    <fullName>Record_type_3</fullName>
    <active>true</active>
    <businessProcess>HAD Team</businessProcess>
    <label>Record type 3</label>
</RecordType>