force-app/main/default/objects/Opportunity/validationRules/Close_Date_Alert.validationRule-meta.xml
<ValidationRule>
    <fullName>Close_Date_Alert</fullName>
    <active>false</active>
    <errorConditionFormula>AND(IsClosed  &lt;&gt; true ,CloseDate &lt;  TODAY())</errorConditionFormula>
    <errorMessage>Hey McFly, unless you are planning to go back in time, please update your close date</errorMessage>
</ValidationRule>