force-app/main/default/objects/Opportunity/validationRules/Multiple_of_5.validationRule-meta.xml
<ValidationRule>
    <fullName>Multiple_of_5</fullName>
    <active>true</active>
    <errorConditionFormula>MOD(Multiple_of_5__c ,5)  &lt;&gt; 0</errorConditionFormula>
    <errorDisplayField>Multiple_of_5__c</errorDisplayField>
    <errorMessage>Opportunity is not a multiple of five.</errorMessage>
</ValidationRule>