force-app/main/default/objects/Opportunity/validationRules/only_System_Admin_can_change_Opportunity.validationRule-meta.xml
<ValidationRule>
    <fullName>only_System_Admin_can_change_Opportunity</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
    NOT(ISPICKVAL( StageName , &quot;Prospecting&quot;))   
    ,ISCHANGED( CloseDate )
   )</errorConditionFormula>
    <errorMessage>if stage is “Prospecting” then only System Admin can change Opportunity close date.</errorMessage>
</ValidationRule>