force-app/main/default/objects/Opportunity/validationRules/Opp_Closed_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Opp_Closed_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Complaince_Review__c , &#39;No&#39;) ,
   OR(ISPICKVAL(  StageName , &#39;Closed Won&#39;),
        ISPICKVAL(  StageName , &#39;Closed Lost&#39;))  )</errorConditionFormula>
    <errorMessage>Cannot close Opportunity as Complaince review is No</errorMessage>
</ValidationRule>