force-app/main/default/objects/Opportunity/validationRules/other_terms_should_be_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>other_terms_should_be_blank</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISPICKVAL( Length_of_agreement_term__c , &#39;Other&#39;)),
     NOT(ISBLANK(Length_of_agreement_term_other__c ))  )</errorConditionFormula>
    <errorDisplayField>Length_of_agreement_term_other__c</errorDisplayField>
    <errorMessage>Other terms should be blank</errorMessage>
</ValidationRule>