force-app/main/default/objects/Opportunity/validationRules/record_owner_can_make_changes.validationRule-meta.xml
<ValidationRule>
    <fullName>record_owner_can_make_changes</fullName>
    <active>true</active>
    <errorConditionFormula>$User.Id  &lt;&gt;  Owner.Id</errorConditionFormula>
    <errorMessage>only the record owner can make changes</errorMessage>
</ValidationRule>