force-app/main/default/objects/Opportunity/validationRules/Stage_cannot_change_after_closed_won.validationRule-meta.xml
<ValidationRule>
    <fullName>Stage_cannot_change_after_closed_won</fullName>
    <active>false</active>
    <errorConditionFormula>AND( 
ISPICKVAL(PRIORVALUE(StageName),&quot;Closed Won&quot;), 
ISCHANGED(StageName) 
)</errorConditionFormula>
    <errorMessage>You cannot change stage field value when stage name is closed won</errorMessage>
</ValidationRule>