force-app/main/default/objects/Opportunity/validationRules/Volume_between_rule_50.validationRule-meta.xml
<ValidationRule>
    <fullName>Volume_between_rule_50</fullName>
    <active>true</active>
    <errorConditionFormula>50 &lt; Volume__c</errorConditionFormula>
    <errorDisplayField>Volume__c</errorDisplayField>
    <errorMessage>Volume on Opportunity should be between -50 and 50</errorMessage>
</ValidationRule>